update TODOs, networks, ini, IP configurations

--- a/tutorials/visualization/omnetpp.ini
+++ b/tutorials/visualization/omnetpp.ini
@@ -4,9 +4,16 @@ debug-on-errors = true
 record-eventlog = false
 
 
-[Config Visualization01]	# Showing Boston downtown
-description = Showing Boston downtown
+[Config Visualization01]
+description = Enabling visualization
 network = VisualizationA
+
+
+######################################################################################################
+[Config Visualization02]		# Showing Boston downtown
+extends = Visualization01
+description = Showing the playground
+network = VisualizationB
 
 # PARAMETERS
 # coordinate system
@@ -19,23 +26,35 @@ network = VisualizationA
 # show the map
 *.visualizer.osgVisualizer.sceneVisualizerType = "SceneOsgEarthVisualizer"
 *.visualizer.osgVisualizer.sceneVisualizer.mapFile = "boston.earth"
-*.visualizer.osgVisualizer.sceneVisualizer.playgroundShading = false
-*.visualizer.osgVisualizer.sceneVisualizer.playgroundColor = "#000000"
-*.visualizer.osgVisualizer.sceneVisualizer.playgroundOpacity = 0.1
-*.visualizer.osgVisualizer.sceneVisualizer.axisLength = 100m
-
-
-######################################################################################################
-[Config Visualization02]	# Adding static 3D objects to the scene	# under construction	# under construction
-extends = Visualization01
-description = Adding static 3D objects to the scene
-
+#*.visualizer.osgVisualizer.sceneVisualizer.playgroundShading = false
+#*.visualizer.osgVisualizer.sceneVisualizer.playgroundColor = "#000000"
+#*.visualizer.osgVisualizer.sceneVisualizer.playgroundOpacity = 0.1
+#*.visualizer.osgVisualizer.sceneVisualizer.axisLength = 100m
 
 ######################################################################################################
-[Config Visualization03]	# Displaying communiation/interference range
+[Config Visualization03]	# Showing the playground
 extends = Visualization02
+description = Showing the playground
+network = VisualizationC
+
+# PARAMETERS
+# coordinate system
+#*.coordinateSystem.playgroundLongitude = -71.070421deg
+#*.coordinateSystem.playgroundLatitude = 42.357824deg
+#*.coordinateSystem.playgroundAltitude = 0.1m
+#*.coordinateSystem.playgroundHeading = 68.3deg
+
+######################################################################################################
+[Config Visualization04]	# Adding static 3D objects to the scene (WIP)
+extends = Visualization03
+description = Adding static 3D objects to the scene (WIP)
+
+
+######################################################################################################
+[Config Visualization05]	# Displaying communiation/interference range
+extends = Visualization04
 description = Displaying communication & interference range
-network = VisualizationB
+network = VisualizationD
 
 # PARAMETERS
 # wlan
@@ -51,8 +70,8 @@ network = VisualizationB
 
 
 ######################################################################################################
-[Config Visualization04]	# Using 3D models for network nodes
-extends = Visualization03
+[Config Visualization06]	# Using 3D models for network nodes
+extends = Visualization05
 description = Using 3D models for network nodes
 
 # PARAMETERS
@@ -66,8 +85,8 @@ description = Using 3D models for network nodes
 
 
 ######################################################################################################
-[Config Visualization05]	# Displaying recent movement and orientation
-extends = Visualization04
+[Config Visualization07]	# Displaying recent movement and orientation
+extends = Visualization06
 description = Displaying recent movement
 
 # PARAMETERS
@@ -108,16 +127,17 @@ description = Displaying recent movement
 
 # VISUALIZER
 # show movements
-*.visualizer.*.mobilityVisualizer.displayVelocity = true
-*.visualizer.*.mobilityVisualizer.velocityLineWidth = 2
-
-*.visualizer.*.mobilityVisualizer.displayMovementTrail = true
-*.visualizer.*.mobilityVisualizer.movementTrailLineWidth = 2
+#*.visualizer.*.mobilityVisualizer.displayVelocity = true
+#*.visualizer.*.mobilityVisualizer.velocityLineWidth = 2
+#*.visualizer.*.mobilityVisualizer.velocityArrowScale = 20
+#
+#*.visualizer.*.mobilityVisualizer.displayMovementTrail = true
+#*.visualizer.*.mobilityVisualizer.movementTrailLineWidth = 2
 
 
 ######################################################################################################
-[Config Visualization06]	# Showing IP addresses
-extends = Visualization05
+[Config Visualization08]	# Showing IP addresses
+extends = Visualization07
 description = Showing IP addresses
 
 # PARAMETERS
@@ -132,8 +152,8 @@ description = Showing IP addresses
 
 
 ######################################################################################################
-[Config Visualization07]	# Showing wifi association
-extends = Visualization06
+[Config Visualization09]	# Showing wifi association
+extends = Visualization08
 description = Showing wifi association
 
 # PARAMETERS
@@ -148,8 +168,8 @@ description = Showing wifi association
 
 
 ######################################################################################################
-[Config Visualization08]	# Displaying transmissions & receptions
-extends = Visualization07
+[Config Visualization10]	# Displaying transmissions & receptions
+extends = Visualization09
 description = Displaying transmissions & receptions
 
 # PARAMETERS
@@ -182,8 +202,8 @@ description = Displaying transmissions & receptions
 
 
 ######################################################################################################
-[Config Visualization09]	# Showing propagating signals
-extends = Visualization08
+[Config Visualization11]	# Showing propagating signals
+extends = Visualization10
 description = Showing propagating signals
 
 # PARAMETERS
@@ -201,8 +221,8 @@ description = Showing propagating signals
 
 
 ######################################################################################################
-[Config Visualization10]	# Showing active physical links
-extends = Visualization09
+[Config Visualization12]	# Showing active physical links
+extends = Visualization11
 description = Showing active physical links
 
 # PARAMETERS
@@ -225,8 +245,8 @@ description = Showing active physical links
 
 
 ######################################################################################################
-[Config Visualization11]	# Showing active data links
-extends = Visualization10
+[Config Visualization13]	# Showing active data links
+extends = Visualization12
 description = Showing active data links
 
 # PARAMETERS
@@ -245,8 +265,8 @@ description = Showing active data links
 
 
 ######################################################################################################
-[Config Visualization12]	# Displaying playout delay statistic
-extends = Visualization11
+[Config Visualization14]	# Displaying playout delay statistic
+extends = Visualization13
 description = Displaying playout delay statistics
 
 # PARAMETERS
@@ -263,12 +283,11 @@ description = Displaying playout delay statistics
 *.visualizer.*.statisticVisualizer.backgroundColor = "yellow"
 
 
-
 ######################################################################################################
-[Config Visualization13]	# Showing configured routing tables
-extends = Visualization12
+[Config Visualization15]	# Showing configured routing tables
+extends = Visualization14
 description = Showing routing tables
-network = VisualizationC
+network = VisualizationE
 
 # PARAMETERS
 # initialize pedestrianVideo position
@@ -324,8 +343,8 @@ network = VisualizationC
 
 
 ######################################################################################################
-[Config Visualization14]	# Displaying 802.11 channel access state
-extends = Visualization13
+[Config Visualization16]	# Displaying 802.11 channel access state
+extends = Visualization15
 description = Displaying 802.11 channel access state
 
 # PARAMETERS
@@ -346,14 +365,14 @@ description = Displaying 802.11 channel access state
 
 
 ######################################################################################################
-[Config Visualization15]	# Showing active network routes
-extends = Visualization14
+[Config Visualization17]	# Showing active network routes
+extends = Visualization16
 description = Showing active network routes
-network = VisualizationD
+network = VisualizationF
 
 # PARAMETERS
 # configurate ipv4 addresses manually
-*.configurator.config = xmldoc("configurationD.xml")
+*.configurator.config = xmldoc("configurationF.xml")
 
 # configure rip
 *.router*.hasRIP = true
@@ -434,11 +453,11 @@ network = VisualizationD
 *.visualizer.*.networkRouteVisualizer.fadeOutHalfLife = 3ms
 
 
-######################################################################################################
-[Config Visualization16]	# Displaying physical environment
-extends = Visualization15
+
+[Config Visualization18]	# Displaying physical environment	
+extends = Visualization17
 description = Displaying physical environment
-network = VisualizationE
+network = VisualizationG
 
 # PARAMETERS
 # physical environment
@@ -454,9 +473,9 @@ network = VisualizationE
 # VISUALIZER
 
 
-######################################################################################################
-[Config Visualization17]	# Displaying obstacle loss
-extends = Visualization16
+
+[Config Visualization19]	# Displaying obstacle loss
+extends = Visualization18
 description = Displaying obstacle loss
 
 # PARAMETERS
@@ -469,14 +488,15 @@ description = Displaying obstacle loss
 *.visualizer.*.obstacleLossVisualizer.displayFaceNormalVectorTrail = true
 
 
-[Config Visualization18]	# Showing packet drops
-extends = Visualization17
+
+[Config Visualization20]	# Showing packet drops
+extends = Visualization19
 description = Showing packet drops
-network = VisualizationF
+network = VisualizationH
 
 # PARAMETERS
 # update ipv4 addresses
-*.configurator.config = xmldoc("configurationF.xml")
+*.configurator.config = xmldoc("configurationH.xml")
 
 # car appearance
 *.car.osgModel = "car.osgb.20.scale"
@@ -593,8 +613,9 @@ network = VisualizationF
 *.visualizer.*.packetDropVisualizer.iconTintAmount = 1
 
 
-[Config Visualization19]	# Displaying transport connections
-extends = Visualization18
+
+[Config Visualization21]	# Displaying transport connections	
+extends = Visualization20
 description = Displaying transport connections
 
 # PARAMETERS
@@ -614,8 +635,9 @@ description = Displaying transport connections
 *.visualizer.*.transportConnectionVisualizer.nodeFilter = "**"
 
 
-[Config Visualization20]	# Showing link breaks
-extends = Visualization19
+
+[Config Visualization22]	# Showing link breaks
+extends = Visualization21
 description = Showing link breaks
 
 # PARAMETERS
@@ -638,8 +660,8 @@ description = Showing link breaks
 *.visualizer.*.linkBreakVisualizer.fadeOutHalfLife = 5s
 
 
-[Config Visualization21]	# Visualizing handovers
-extends = Visualization20
+[Config Visualization23]	# Visualizing handovers
+extends = Visualization22
 description = Visualizing handovers
 
 # PARAMETERS
@@ -647,17 +669,20 @@ description = Visualizing handovers
 # VISUALIZER
 
 
-[Config Visualization22]
-extends = Visualization21
-description = Displaying changing routes
+
+
+[Config Visualization24]	# Displaying changing routes
+extends = Visualization23
+description = Displaying changing routes	
 
 # PARAMETERS
 
 # VISUALIZER
 
 
-[Config Visualization23]
-extends = Visualization22
+
+[Config Visualization25]
+extends = Visualization24
 description = Summary
 
 # PARAMETERS
@@ -694,3 +719,4 @@ description = Summary
 # obstacle loss visualizer: shows obstacle loss
 *.visualizer.*.obstacleLossVisualizer.displayIntersectionTrail = true
 *.visualizer.*.obstacleLossVisualizer.displayFaceNormalVectorTrail = true
+
