--- a/tutorials/visualization/omnetpp.ini
+++ b/tutorials/visualization/omnetpp.ini
@@ -26,10 +26,10 @@ network = VisualizationB
 # show the map
 *.visualizer.osgVisualizer.sceneVisualizerType = "SceneOsgEarthVisualizer"
 *.visualizer.osgVisualizer.sceneVisualizer.mapFile = "boston.earth"
-#*.visualizer.osgVisualizer.sceneVisualizer.playgroundShading = false
-#*.visualizer.osgVisualizer.sceneVisualizer.playgroundColor = "#000000"
-#*.visualizer.osgVisualizer.sceneVisualizer.playgroundOpacity = 0.1
-#*.visualizer.osgVisualizer.sceneVisualizer.axisLength = 100m
+*.visualizer.osgVisualizer.sceneVisualizer.playgroundShading = false
+*.visualizer.osgVisualizer.sceneVisualizer.playgroundColor = "#000000"
+*.visualizer.osgVisualizer.sceneVisualizer.playgroundOpacity = 0.1
+*.visualizer.osgVisualizer.sceneVisualizer.axisLength = 100m
 
 ######################################################################################################
 [Config Visualization03]	# Showing the playground
@@ -127,12 +127,12 @@ description = Displaying recent movement
 
 # VISUALIZER
 # show movements
-#*.visualizer.*.mobilityVisualizer.displayVelocity = true
-#*.visualizer.*.mobilityVisualizer.velocityLineWidth = 2
-#*.visualizer.*.mobilityVisualizer.velocityArrowScale = 20
-#
-#*.visualizer.*.mobilityVisualizer.displayMovementTrail = true
-#*.visualizer.*.mobilityVisualizer.movementTrailLineWidth = 2
+*.visualizer.*.mobilityVisualizer.displayVelocity = true
+*.visualizer.*.mobilityVisualizer.velocityLineWidth = 2
+*.visualizer.*.mobilityVisualizer.velocityArrowScale = 20
+
+*.visualizer.*.mobilityVisualizer.displayMovementTrail = true
+*.visualizer.*.mobilityVisualizer.movementTrailLineWidth = 2
 
 
 ######################################################################################################
@@ -335,7 +335,7 @@ network = VisualizationE
 *.visualizer.*.mediumVisualizer.displayInterferenceRanges = false
 
 # routing table visualizer: routing table entries to videoStreamServer
-*.visualizer.*.routingTableVisualizer.subscriptionModule = "VisualizationC"
+*.visualizer.*.routingTableVisualizer.subscriptionModule = "VisualizationE"
 *.visualizer.*.routingTableVisualizer.destinationFilter = "*.videoStreamServer"
 *.visualizer.*.routingTableVisualizer.lineColor = "brown"
 *.visualizer.*.routingTableVisualizer.lineWidth = 4
