--- a/tutorials/visualization/omnetpp.ini
+++ b/tutorials/visualization/omnetpp.ini
@@ -542,7 +542,7 @@ network = VisualizationH
 *.videoStreamServer.udpApp[1].localPort = 3000
 *.videoStreamServer.udpApp[1].sendInterval = exponential(5ms)
 *.videoStreamServer.udpApp[1].packetLen = 1000B
-*.videoStreamServer.udpApp[1].videoSize = 50000B
+*.videoStreamServer.udpApp[1].videoSize = 500000B
 
 # accessPoint2 mobility & wlan
 *.accessPoint2.mobility.initialLatitude = 42.35606deg
