--- a/examples/dhcp/omnetpp.ini
+++ b/examples/dhcp/omnetpp.ini
@@ -4,15 +4,17 @@ sim-time-limit = 100d
 
 **.radio.displayCommunicationRange = true
 
-*.visualizer.dataLinkVisualizer.packetNameFilter = "ping*"
+*.visualizer.dataLinkVisualizer.packetFilter = "ping*"
 *.visualizer.dataLinkVisualizer.lineStyle = "dotted"
-#*.visualizer.networkRouteVisualizer.packetNameFilter = "ping*"
+#*.visualizer.networkRouteVisualizer.packetFilter = "ping*"
 
 [Config WiredDHCP]
 description = Hosts configured via DHCP
 network = WiredNetWithDHCP
 *.numHosts = 10
 **.numUdpApps = 1
+
+*.visualizer.routingTableVisualizer.destinationFilter = "**"
 
 **.client[*].udpApp[0].typename = "DHCPClient"
 **.client[*].udpApp[0].startTime = uniform(0s, 1s)
