--- a/examples/inet/flatnet/omnetpp.ini
+++ b/examples/inet/flatnet/omnetpp.ini
@@ -29,3 +29,6 @@ tkenv-plugin-path = ../../../etc/plugins
 
 
 
+*.visualizer.networkRouteVisualizer.packetFilter = "*"
+*.visualizer.transportConnectionVisualizer.nodeFilter = "**"
+**.displayAddresses = false
