--- a/tutorials/visualization/omnetpp.ini
+++ b/tutorials/visualization/omnetpp.ini
@@ -187,14 +187,14 @@ extends = VisualizationTutorial08
 description = Add links
 
 # link visualizer parameters
-*.visualizer.*.dataLinkVisualizer.packetNameFilter = "*Stream*"
+*.visualizer.*.dataLinkVisualizer.packetFilter = "*Stream*"
 
 [Config VisualizationTutorial10]
 extends = VisualizationTutorial09
 description = Add routes
 
 # route visualizer parameters
-*.visualizer.*.networkRouteVisualizer.packetNameFilter = "*Stream*"
+*.visualizer.*.networkRouteVisualizer.packetFilter = "*Stream*"
 
 [Config VisualizationTutorial11]
 extends = VisualizationTutorial10
@@ -223,5 +223,5 @@ extends = VisualizationTutorial12
 description = Add obstacle loss
 
 # medium visualizer parameters
-*.visualizer.*.obstacleLossVisualizer.displayIntersectionTrail = true
-*.visualizer.*.obstacleLossVisualizer.displayFaceNormalVectorTrail = true
+*.visualizer.*.obstacleLossVisualizer.displayIntersection = true
+*.visualizer.*.obstacleLossVisualizer.displayFaceNormalVector = true
