--- a/tutorials/wireless/omnetpp.ini
+++ b/tutorials/wireless/omnetpp.ini
@@ -26,6 +26,22 @@ sim-time-limit = 25s
 
 *.host*.**.bitrate = 1Mbps
 
+*.visualizer.routingTableVisualizer.destinationFilter = "*.hostB"
+
+*.visualizer.packetDropVisualizer.packetFilter = "UDPData*"
+*.visualizer.linkBreakVisualizer.nodeFilter = "**"
+*.visualizer.interfaceTableVisualizer.nodeFilter = "**"
+*.visualizer.interfaceTableVisualizer.interfaceFilter = "wlan*"
+
+*.visualizer.mediumVisualizer.packetFilter = "AODV*"
+*.visualizer.mediumVisualizer.signalPropagationAnimationSpeed = 0.000001
+*.visualizer.mediumVisualizer.signalTransmissionAnimationSpeed = 0.0005
+*.visualizer.mediumVisualizer.displayTransmissions = true # enables displaying radio signals propagating through the radio medium
+*.visualizer.mediumVisualizer.displayReceptions = true # enables displaying radio signals propagating through the radio medium
+*.visualizer.mediumVisualizer.displaySignals = true # enables displaying radio signals propagating through the radio medium
+*.visualizer.mediumVisualizer.transmissionImage = "misc/transmission.png"
+*.visualizer.mediumVisualizer.receptionImage = "misc/reception.png"
+
 ######################################################################################################
 [Config Wireless02]
 description = Setting up some animations
@@ -35,10 +51,10 @@ extends = Wireless01
 
 *.visualizer.sceneVisualizer.descriptionFigure = "title"
 
-*.visualizer.mediumVisualizer.displaySignals = true
-*.visualizer.mediumVisualizer.signalPropagationUpdateInterval = 100ns
+#*.visualizer.mediumVisualizer.displaySignals = true
+#*.visualizer.mediumVisualizer.signalPropagationUpdateInterval = 100ns
 
-*.visualizer.physicalLinkVisualizer.packetNameFilter = "UDPData*"
+*.visualizer.physicalLinkVisualizer.packetFilter = "UDPData*"
 
 ######################################################################################################
 [Config Wireless03]
@@ -61,8 +77,9 @@ extends = Wireless03
 *.configurator.optimizeRoutes = false
 *.host*.routingTable.netmaskRoutes = ""
 
-*.visualizer.dataLinkVisualizer.packetNameFilter = "UDPData*"
-*.visualizer.networkRouteVisualizer.packetNameFilter = "UDPData*"
+*.visualizer.dataLinkVisualizer.packetFilter = "UDPData*"
+*.visualizer.networkRouteVisualizer.packetFilter = "UDPData*"
+*.visualizer.networkRouteVisualizer.lineColor = "#FF0000"
 
 ######################################################################################################
 [Config Wireless05]
@@ -74,7 +91,7 @@ extends = Wireless04
 
 *.hostA.wlan[0].radio.displayInterferenceRange = true
 
-*.visualizer.dataLinkVisualizer.packetNameFilter = ""
+#*.visualizer.dataLinkVisualizer.packetFilter = ""
 
 ######################################################################################################
 [Config Wireless06]
@@ -112,7 +129,7 @@ extends = Wireless07
 *.host*.wlan[0].radio.displayInterferenceRange = false
 *.hostR1.wlan[0].radio.displayCommunicationRange = false
 
-*.visualizer.mediumVisualizer.displaySignals = false
+#*.visualizer.mediumVisualizer.displaySignals = false
 
 ######################################################################################################
 [Config Wireless09]
@@ -125,6 +142,8 @@ extends = Wireless08
 
 *.host*.wlan[0].mac.maxQueueSize = 10
 
+*.visualizer.mobilityVisualizer.displayOrientation = true
+*.visualizer.mobilityVisualizer.displayVelocity = true
 *.visualizer.mobilityVisualizer.displayMovementTrail = true
 
 ######################################################################################################
@@ -138,7 +157,7 @@ extends = Wireless09
 
 *.hostB.wlan[0].radio.displayCommunicationRange = true
 
-*.visualizer.dataLinkVisualizer.packetNameFilter = "AODV*"
+#*.visualizer.dataLinkVisualizer.packetFilter = "AODV*"
 
 ######################################################################################################
 [Config Wireless11]
