--- a/examples/adhoc/qos/omnetpp.ini
+++ b/examples/adhoc/qos/omnetpp.ini
@@ -1,12 +1,14 @@
 [General]
 network = QosThroughput
-#cmdenv-output-file = omnetpp.log
-#cmdenv-express-mode = false
-#debug-on-errors = true
 tkenv-plugin-path = ../../../etc/plugins
-#record-eventlog = true
-
-sim-time-limit = 5s
+# for validation
+record-eventlog = true
+cmdenv-log-prefix = "%f %g [%l] "
+cmdenv-express-mode = false
+fingerprint-events="NOT(**.mac.**)"
+fingerprint = 000-000
+sim-time-limit = 1s
+# for validation
 
 
 **.arpType = "GlobalARP"
@@ -70,10 +72,11 @@ sim-time-limit = 5s
 #**.mac.ctn[*].backoffOptimization = false
 #for validation
 num-rngs = 5
-**.wlan[*].*.hcf.edca.edcaf[0].contention.rng-0 = 1
-**.wlan[*].*.hcf.edca.edcaf[1].contention.rng-0 = 2
-**.wlan[*].*.hcf.edca.edcaf[2].contention.rng-0 = 3
-**.wlan[*].*.hcf.edca.edcaf[3].contention.rng-0 = 4
+**.wlan[*].mac.ctn[0].rng-0 = 1
+**.wlan[*].mac.ctn[1].rng-0 = 2
+**.wlan[*].mac.ctn[2].rng-0 = 3
+**.wlan[*].mac.ctn[3].rng-0 = 4
+
 **.wlan[*].*.dataBitrate = 54Mbps
 **.wlan[*].*.basicBitrate = 24Mbps
 **.wlan[*].*.controlBitrate = 1Mbps
