put job script into a file in the image. build both modes.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,22 @@ language: generic
 services:
   - docker
 
-env:
-  - OPP_PATH=/root/omnetpp-5.2-linux/bin RUN_FINGERPRINT_TESTS=yes
-  - OPP_PATH=/root/omnetpp-5.2-windows/bin
-  - OPP_PATH=/root/omnetpp-5.2-macosx/bin
-
 before_install:
   - docker pull torokati44/omnetpp-core-triplatform
 
+# can't really do it with a matrix because of the constraint that fingerprint tests can only be ran on linux
+env:
+  - OPP_PATH=/root/omnetpp-5.2-linux/bin   RUN_FINGERPRINT_TESTS=yes MODE=release
+  - OPP_PATH=/root/omnetpp-5.2-linux/bin   RUN_FINGERPRINT_TESTS=no  MODE=release
+  - OPP_PATH=/root/omnetpp-5.2-windows/bin RUN_FINGERPRINT_TESTS=no  MODE=release
+  - OPP_PATH=/root/omnetpp-5.2-macosx/bin  RUN_FINGERPRINT_TESTS=no  MODE=release
+
+  - OPP_PATH=/root/omnetpp-5.2-linux/bin   RUN_FINGERPRINT_TESTS=yes MODE=debug
+  - OPP_PATH=/root/omnetpp-5.2-linux/bin   RUN_FINGERPRINT_TESTS=no  MODE=debug
+  - OPP_PATH=/root/omnetpp-5.2-windows/bin RUN_FINGERPRINT_TESTS=no  MODE=debug
+  - OPP_PATH=/root/omnetpp-5.2-macosx/bin  RUN_FINGERPRINT_TESTS=no  MODE=debug
+
 script:
-  - docker run -ti --env RUN_FINGERPRINT_TESTS --env OPP_PATH -v /home/travis/build/$TRAVIS_REPO_SLUG:/$TRAVIS_REPO_SLUG torokati44/omnetpp-core-triplatform /bin/bash -c "export PATH=$OPP_PATH:\\\\\$PATH; cd /$TRAVIS_REPO_SLUG && make makefiles && make MODE=release && if [ x$RUN_FINGERPRINT_TESTS = xyes ]; then cd tests/fingerprint && ./runDefaultTests.sh -e opp_run_release; fi"
+  - docker run -ti --env TRAVIS_REPO_SLUG --env OPP_PATH --env RUN_FINGERPRINT_TESTS --env MODE
+      -v /home/travis/build/$TRAVIS_REPO_SLUG:/$TRAVIS_REPO_SLUG
+      torokati44/omnetpp-core-triplatform /bin/bash /root/travis-runner.sh
