--- a/_scripts/travis/omnetpp-core-triplatform/Dockerfile
+++ b/_scripts/travis/omnetpp-core-triplatform/Dockerfile
@@ -83,3 +83,6 @@ ENV PATH /root/omnetpp-5.2-linux/bin:$PATH
 
 WORKDIR /root
 COPY travis-runner.sh /root/
+
+RUN apt install ccache
+ENV PATH /usr/lib/ccache:$PATH
